--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/MDTheme">
         <activity
+            android:name=".Activities.UsingHelperActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.AboutActivity"
+            android:launchMode="singleTask" />
+        <activity
             android:name=".Activities.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,15 +27,12 @@
         </activity>
         <activity
             android:name=".Activities.PicActivity"
-            android:label="CryptoApp"
             android:launchMode="singleTask" />
         <activity
             android:name=".Activities.TextActivity"
-            android:label="CryptoApp"
             android:launchMode="singleTask" />
         <activity
             android:name=".Activities.FileActivity"
-            android:label="CryptoApp"
             android:launchMode="singleTask" />
     </application>
 
