add fake terminal,which can run some linux command;add QR code scanner,which can get information in the QR code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.cryptoapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
 
     <application
         android:allowBackup="true"
@@ -10,6 +19,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MDTheme">
+        <activity android:name="com.google.zxing.activity.CaptureActivity" />
+        <activity
+            android:name=".Activities.ScanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.FakeTerminalActivity"
+            android:exported="false" />
         <activity
             android:name=".Activities.UsingHelperActivity"
             android:exported="false" />
