--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,16 @@ android {
     compileSdkVersion 33
     buildToolsVersion "29.0.3"
 
+    viewBinding {
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.example.cryptoapp"
         minSdkVersion 26
         targetSdkVersion 33
-        versionCode 20230207
-        versionName "2.1.1"
+        versionCode 20230212
+        versionName "2.2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -40,4 +44,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'com.google.zxing:core:3.5.1'
+    implementation 'com.github.jenly1314:zxing-lite:2.3.0'
+    implementation 'pub.devrel:easypermissions:2.0.1'
 }
