--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -19,10 +18,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MDTheme">
-        <activity android:name="com.google.zxing.activity.CaptureActivity" />
         <activity
-            android:name=".Activities.ScanActivity"
+            android:name=".Activities.SettingsActivity"
             android:exported="false" />
+        <activity
+            android:name=".Activities.EnterSearchStringFragment"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".Activities.SearchActivity"
+            android:exported="false" />
+        <activity android:name="com.google.zxing.activity.CaptureActivity" />
         <activity
             android:name=".Activities.FakeTerminalActivity"
             android:exported="false" />
