--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,10 @@ android {
     defaultConfig {
         applicationId "com.example.cryptoapp"
         minSdkVersion 26
-        targetSdkVersion 33
-        versionCode 20230225
-        versionName "2.4.0"
+        //noinspection ExpiredTargetSdkVersion
+        targetSdkVersion 29
+        versionCode 20230327
+        versionName "2.4.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
